fix: 🎨 objkt info alignment

--- a/src/components/item-info/index.module.scss
+++ b/src/components/item-info/index.module.scss
@@ -25,12 +25,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 1em;
   margin-top: 30px;
-  padding-top: 20px;
-  padding-bottom: 20px;
   word-break: normal;
   width: 100%;
+  padding: 20px 0;
 }
 
 .spread {
@@ -38,8 +36,6 @@
   align-items: center;
   justify-content: space-between;
   flex-direction: column;
-
-  padding: 0 1em;
 
   width: 100%;
 
